Fix set-pet back navigation, add sticky onboarding actions, and enforce date-left alignment

--- a/src/index.css
+++ b/src/index.css
@@ -484,12 +484,22 @@
 /* Date input alignment: keep native picker, force trigger to far-right. */
 input.huddle-date-input {
   position: relative;
-  text-align: left;
-  text-align-last: left;
+  text-align: left !important;
+  text-align-last: left !important;
+  -webkit-text-align-last: left !important;
   padding-left: 0;
 }
 input.huddle-date-input::-webkit-date-and-time-value {
-  text-align: left;
+  text-align: left !important;
+}
+input.huddle-date-input::-webkit-datetime-edit,
+input.huddle-date-input::-webkit-datetime-edit-fields-wrapper,
+input.huddle-date-input::-webkit-datetime-edit-text,
+input.huddle-date-input::-webkit-datetime-edit-month-field,
+input.huddle-date-input::-webkit-datetime-edit-day-field,
+input.huddle-date-input::-webkit-datetime-edit-year-field {
+  text-align: left !important;
+  padding-left: 0 !important;
 }
 input.huddle-date-input::-webkit-calendar-picker-indicator {
   position: absolute;
